--- a/package.json
+++ b/package.json
@@ -9,13 +9,25 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/builders": "^0.15.0",
-    "@discordjs/opus": "^0.5.3",
-    "@discordjs/rest": "^0.5.0",
-    "@discordjs/voice": "^0.10.0",
-    "discord-api-types": "^0.33.5",
-    "discord-player": "^5.2.2",
-    "discord.js": "^13.8.0",
-    "dotenv": "^16.0.1"
+    "@discord-player/extractor": "^4.4.6",
+    "@discordjs/builders": "^1.7.0",
+    "@discordjs/collection": "^2.0.0",
+    "@discordjs/opus": "^0.9.0",
+    "@discordjs/rest": "^2.2.0",
+    "@discordjs/voice": "^0.16.1",
+    "@distube/soundcloud": "^1.3.3",
+    "@distube/spotify": "^1.6.0",
+    "@distube/yt-dlp": "^1.1.3",
+    "@distube/ytdl-core": "^4.13.3",
+    "discord-api-types": "^0.37.76",
+    "discord-player": "^6.6.7",
+    "discord-ytdl-core": "^5.0.4",
+    "discord.js": "^14.14.1",
+    "distube": "^4.1.1",
+    "dotenv": "^16.0.1",
+    "mediaplex": "^0.0.9",
+    "play-dl": "^1.9.7",
+    "punycode.js": "^2.3.1",
+    "youtube-ext": "^1.1.16"
   }
 }
