--- a/package.json
+++ b/package.json
@@ -20,16 +20,20 @@
     "@distube/spotify": "^1.6.0",
     "@distube/yt-dlp": "^1.1.3",
     "@distube/ytdl-core": "^4.13.3",
+    "bufferutil": "^4.0.8",
     "discord-api-types": "^0.37.76",
     "discord-player": "^6.6.7",
     "discord-ytdl-core": "^5.0.4",
     "discord.js": "^14.14.1",
     "distube": "^4.1.1",
     "dotenv": "^16.0.1",
+    "express": "^4.19.2",
     "husky": "^9.0.11",
     "mediaplex": "^0.0.9",
     "play-dl": "^1.9.7",
     "punycode.js": "^2.3.1",
+    "utf-8-validate": "^6.0.3",
+    "ws": "^8.16.0",
     "youtube-ext": "^1.1.16"
   }
 }
