--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,15 +16,15 @@ jobs:
     - name: Install Node.js and npm
       uses: actions/setup-node@v4
       with:
-        node-version: '21.5.0'
+        node-version: '21.5.0'  # Keep Node.js version '21.5.0'
 
     - name: Install dependencies
       run: npm install
 
-    - name: Build
-      run: npm run build
+    - name: Start the bot
+      run: npm start
 
     - name: Deploy
       run: |
         # Replace the following commands with your deployment script
-        ssh root@146.190.162.178 'cd /root/HypeBot && git pull origin main && npm install && npm run build && pm2 restart your-app'
+        ssh root@146.190.162.178 'cd /root/HypeBot && git pull origin main && npm install && npm start'
