--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,16 +21,14 @@ jobs:
     - name: Install dependencies
       run: npm install
 
-    - name: Set up environment variables
+    - name: Set up environment variables and start the bot
       run: |
         echo "TOKEN=${{ secrets.TOKEN }}" >> $GITHUB_ENV
         echo "CLIENT_ID=${{ secrets.CLIENT_ID }}" >> $GITHUB_ENV
         echo "DP_FORCE_YTDL_MOD=${{ secrets.DP_FORCE_YTDL_MOD }}" >> $GITHUB_ENV
-
-    - name: Start the bot
-      run: npm start
+        node ./index.js
 
     - name: Deploy
       run: |
         # Replace the following commands with your deployment script
-        ssh root@146.190.162.178 'cd /root/HypeBot && git pull origin main && npm install && npm start'
+        ssh root@146.190.162.178 'cd /root/HypeBot && git pull origin main && npm install && node ./index.js'
