--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
     volumes:
       - musicbot_data:/usr/src/app
     command: ["node", "index.js"]
+    env_file:
+      - .env
 
 volumes:
   mongodb_data:
