--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@distube/ytdl-core": "^4.13.3",
     "bufferutil": "^4.0.8",
     "discord-api-types": "^0.37.76",
+    "discord-buttons": "^4.0.0-deprecated",
     "discord-player": "^6.6.7",
     "discord-ytdl-core": "^5.0.4",
     "discord.js": "^14.14.1",
@@ -31,6 +32,7 @@
     "formidable": "^3.5.1",
     "husky": "^9.0.11",
     "mediaplex": "^0.0.9",
+    "mongodb": "^6.5.0",
     "play-dl": "^1.9.7",
     "punycode.js": "^2.3.1",
     "superagent": "^8.1.2",
