--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     volumes:
       - musicbot_data:/usr/src/app
       - /usr/src/app/node_modules
-    command: node ./index.js >/dev/null 2>&1
+    command: /bin/sh -c "node ./index.js || true"
 
 volumes:
   mongodb_data:
