--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "intro",
   "version": "1.0.0",
   "description": "After you have cloned the repo make sure to create a `.env` file with the `TOKEN` and `CLIENT_ID` specified for example",
-  "main": "index.js",
+  "main": "api/bot.js",
   "scripts": {
-    "start": "node ./index.js",
+    "start": "node api/bot.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -26,7 +26,7 @@
     "discord-ytdl-core": "^5.0.4",
     "discord.js": "^14.14.1",
     "distube": "^4.1.1",
-    "dotenv": "^16.0.1",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "formidable": "^3.5.1",
     "husky": "^9.0.11",
@@ -34,6 +34,8 @@
     "mongodb": "^6.5.0",
     "play-dl": "^1.9.7",
     "punycode.js": "^2.3.1",
+    "sequelize": "^6.37.3",
+    "sqlite3": "^5.1.7",
     "superagent": "^8.1.2",
     "utf-8-validate": "^6.0.3",
     "ws": "^8.16.0",
