--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,9 +17,9 @@ services:
     depends_on:
       - mongodb
     volumes:
-      - musicbot_data:/usr/src/app
-      - /usr/src/app/node_modules
-    command: ["node", "index.js"]
+      - musicbot_data:/usr/src/pages
+      - /usr/src/pages/node_modules
+    command: ["node", "bot.js"]
 
 volumes:
   mongodb_data:
